--- a/style.css
+++ b/style.css
@@ -9,18 +9,20 @@ h1{
 .red-color{
     color: rgb(255, 0, 0);
 }
-section{
+.flexible-container{
+    
     display: flex;
     margin-bottom: 200px;
 
 }
 .half-width{
     width: 50%;
-    padding-left: 150px 200px;
+    padding-left: 150% 200% 50% 50%;
+    
 }
 .half-width img{
     width: 80%;
-    padding: 150px 200px;
+    padding: 150px 200px 50px 50px;
     
 }
 .link-button{
@@ -40,4 +42,21 @@ section{
     background-repeat: no-repeat;
     background-position: right;
     background-size: 200px;
+}
+.experiences-area{
+    background-image: url(online-eidit/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 10px;
+    box-shadow:10px 10px 10px 10px tomato;
+    
+
 }
