--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1{
     text-decoration: none;
     background-color: rgb(255, 0, 0);
     padding: 10px 40px;
-    font-weight: 500;
+    font-weight: 300;
     color: white;
     border-radius: 5px;
 }
@@ -59,4 +59,8 @@ h1{
     box-shadow:10px 10px 10px 10px tomato;
     
 
+}
+.army{
+    text-decoration: none;
+    color: black;
 }
