--- a/style.css
+++ b/style.css
@@ -18,10 +18,12 @@ h1{
 .half-width{
     width: 50%;
     padding-left: 150% 200% 50% 50%;
+    margin-left: 5%;
+    margin-right: 5%;
     
 }
 .half-width img{
-    width: 80%;
+    width: 50%;
     padding: 150px 200px 50px 50px;
     
 }
